--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <h2 style="text-align:center;">Perfumes Destacados</h2>
   <div class="products">
     <div class="product">
-      <img src="https://armaf.com/products/odyssey-mandarin-sky-elixir" alt="Mandarin Sky">
+      <img src="https://fimgs.net/mdimg/perfume-thumbs/375x500.106709.jpg" alt="Mandarin Sky">
       <h3>Mandarin Sky</h3>
       <p>$45.00</p>
       <a href="#" class="btn">Comprar ahora</a>
