--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
       color: #111;
     }
     header {
-      text-align: center;
-      padding: 60px 20px 40px;
-      background-color: #ffffff;
+      header {
+  text-align: center;
+  padding: 60px 20px 40px;
+background-color: #f5e9d5;
+
+}
+
     }
     header h1 {
       font-size: 2.5em;
