--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@ background-color: #f5e9d5;
       <a href="#" class="btn">Comprar ahora</a>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/220x300?text=Oud+Velours" alt="Oud Velours">
+      <img src="https://www.chaosfragrances.com/cdn/shop/files/rasasi-hawas-black-48318371692838.png?v=1730982610" alt="Rasasi Hawas Black">
       <h3>Oud Velours</h3>
       <p>$55.00</p>
       <a href="#" class="btn">Comprar ahora</a>
     </div>
     <div class="product">
-      <img src="https://via.placeholder.com/220x300?text=Noir+Amour" alt="Noir Amour">
+      <img src="https://i5.walmartimages.com/asr/15d2a56b-c602-4b91-99d0-16632e44bd00.4a9000c21a9b99842c474ea2f73ad6be.jpeg" alt="Stallion 53">
       <h3>Noir Amour</h3>
       <p>$49.00</p>
       <a href="#" class="btn">Comprar ahora</a>
@@ -113,7 +113,7 @@ background-color: #f5e9d5;
 
 <section class="section testimonials">
   <h2 style="text-align:center;">Testimonios</h2>
-  <p>"Me preguntaron qué perfume usaba en la primera cita."</p>
+  <p>"En la primera cita, me preguntaron, que perfume usas 🔥."</p>
   <p>"Este perfume huele como uno de $200. Increíble."</p>
   <p>"Lo llevé a una reunión y me preguntaron de dónde era. Un éxito total."</p>
 </section>
@@ -121,8 +121,8 @@ background-color: #f5e9d5;
 <section class="section" style="text-align:center;">
   <h2>Contacto</h2>
   <p>Contáctanos por WhatsApp o síguenos en Instagram:</p>
-  <p><a href="https://wa.me/123456789" class="btn">WhatsApp</a></p>
-  <p><a href="https://instagram.com/tuusuario" class="btn">Instagram</a></p>
+  <p><a href="https://wa.me/+584242185529" class="btn">WhatsApp</a></p>
+  <p><a href="https://instagram.com/gyrointheworld" class="btn">Instagram</a></p>
 </section>
 
 <footer>
