--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@ background-color: #f5e9d5;
       <a href="#" class="btn">Comprar ahora</a>
     </div>
     <div class="product">
-      <img src="https://www.chaosfragrances.com/cdn/shop/files/rasasi-hawas-black-48318371692838.png?v=1730982610" alt="Rasasi Hawas Black">
-      <h3>Oud Velours</h3>
+      <img src="https://www.chaosfragrances.com/cdn/shop/files/rasasi-hawas-black-48318371692838.png?v=1730982610" alt="Hawas Black">
+      <h3>Hawas Black</h3>
       <p>$55.00</p>
       <a href="#" class="btn">Comprar ahora</a>
     </div>
     <div class="product">
       <img src="https://i5.walmartimages.com/asr/15d2a56b-c602-4b91-99d0-16632e44bd00.4a9000c21a9b99842c474ea2f73ad6be.jpeg" alt="Stallion 53">
-      <h3>Noir Amour</h3>
+      <h3>Stallion 53</h3>
       <p>$49.00</p>
       <a href="#" class="btn">Comprar ahora</a>
     </div>
